fix fluent menu demo for z-index

--- a/testapp/app/assets/stylesheets/docs.css
+++ b/testapp/app/assets/stylesheets/docs.css
@@ -44,7 +44,7 @@ header {
 header {
   height: 45px;
   position: relative;
-  z-index: 1;
+  /*z-index: 1;*/
 }
 .introduce {
   height: 170px;
